--- a/src/ProjectManager/Areas/Identity/Pages/Account/LogOut.cshtml
+++ b/src/ProjectManager/Areas/Identity/Pages/Account/LogOut.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @using Microsoft.AspNetCore.Identity
 @attribute [IgnoreAntiforgeryToken]
-@inject SignInManager<IdentityUser> SignInManager
+@inject SignInManager<UserProfile> SignInManager
 @functions {
     public async Task<IActionResult> OnPost()
     {
