--- a/src/ProjectManager/Areas/Identity/Pages/Account/Login.cshtml
+++ b/src/ProjectManager/Areas/Identity/Pages/Account/Login.cshtml
@@ -9,6 +9,45 @@
 <div class="row">
     <div class="align-self-center">
         <section>
+            <h3>Login</h3>
+            <hr />
+            @{
+                if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                {
+                    <div>
+                        <p>
+                            There are no external authentication services configured.                            
+                        </p>
+                    </div>
+                }
+                else
+                {
+                    <div>
+                        <p>
+                            Click below to login using your windows login. Your username will be username@jppuk.onmicrosoft.com (e.g. Cedarbarn\<b>philb</b> would become <b>philb</b>@@jppuk.onmicrosoft.com) and the password is the same as your computer password.
+                            <p/>
+                        <p>
+                            If you are having difficulties please speak with your team lead.
+                        </p>
+                    </div>
+
+                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                        <div>
+                            <p>
+                                @foreach (var provider in Model.ExternalLogins)
+                                {
+                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">Log in with windows</button>
+                                }
+                            </p>
+                        </div>
+                    </form>
+                }
+            }
+        </section>
+    </div>
+
+    <div class="align-self-center">
+        <section>
             <form id="account" method="post">
                 <h2>Use a local account to log in.</h2>
                 <hr />
@@ -48,38 +87,7 @@
             </form>
         </section>
     </div>    
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to log in.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">
-                                article
-                                about setting up this ASP.NET application to support logging in via external services
-                            </a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
+    
 </div>
 
 @section Scripts {
