--- a/src/ProjectManager/Components/QuoteSummary.razor
+++ b/src/ProjectManager/Components/QuoteSummary.razor
@@ -1,6 +1,7 @@
 ﻿@using Data
 @using Blazorise
 @using System.Text
+@using CommunityToolkit.Diagnostics
 
 @if (TaskState != null && TaskState.UserQuotes.Any())
 {
@@ -8,7 +9,7 @@
         <Collapse Visible="@collapseVisible">
             <CollapseHeader>
                 <Heading Size="HeadingSize.Is5">
-                    <Button Clicked="@(()=>collapseVisible = !collapseVisible)">@TaskState.UserQuotes.Count() quotes outstanding</Button>
+                    <Button Clicked="@(()=>collapseVisible = !collapseVisible)">@TaskState.UserQuotes.Count() outstanding quotes</Button>
                 </Heading>
             </CollapseHeader>
             <CollapseBody>
@@ -17,7 +18,11 @@
                     if (!q.Responded.HasValue)
                     {
                         <div>
-                        @GenerateSummary(q)
+                            <div>
+                            @GenerateSummary(q)
+                            </div>
+                            <Button Color="Color.Success" Clicked="async () => await Accept(q, true)">Accept</Button>
+                            <Button Color="Color.Danger" Clicked="async () => await Accept(q, false)">Reject</Button>
                         </div>
                     }
                 }
@@ -34,6 +39,15 @@
 
     private string GenerateSummary(Quote q)
     {
-        return $"{q.Project.Name} was quoted at {q.TotalFee} by {q.Issuer.FirstName} {q.Issuer.LastName} on {q.Issued}";
+        return $"{q.Project.Name} was quoted at £{q.TotalFee} by {q.Issuer.FirstName} {q.Issuer.LastName} on {q.Issued.ToShortDateString()}";
+    }
+
+    private async Task Accept(Quote q, bool accepted)
+    {
+        Guard.IsNotNull(TaskState);
+
+        q.Responded = DateTime.Now;
+        q.Won = accepted;
+        await TaskState.SaveChangesAsync();
     }
 }
