--- a/src/ProjectManager/Pages/New/NewQuoteView.razor
+++ b/src/ProjectManager/Pages/New/NewQuoteView.razor
@@ -281,8 +281,9 @@
                 Issuer = profile,
                 Issued = DateTime.Now,
                 Project = project,
-                TotalFee = 0
-    });
+                TotalFee = 0,
+                Won = false
+        });
         await _context.SaveChangesAsync();
     }
 }
