--- a/src/ProjectManager/Components/ProjectView.razor
+++ b/src/ProjectManager/Components/ProjectView.razor
@@ -16,30 +16,32 @@
     <Container Fluid>
         <Row>
             <Column ColumnSize="ColumnSize.Is9">
-    <Heading Size="HeadingSize.Is2">@TaskState.SelectedProject.ProjectId - @TaskState.SelectedProject.Name</Heading>
+                <Heading Size="HeadingSize.Is2">@TaskState.SelectedProject.ProjectId - @TaskState.SelectedProject.Name</Heading>
             </Column>
             <Column ColumnSize="ColumnSize.Is3">
                 Users
             </Column>
         </Row>
     </Container>
-        
+
     <Buttons Role="ButtonsRole.Toolbar">
-    <Buttons>
-        @if (folder != null)
-        {
-            <Button Color="Color.Primary" Clicked="() => folder.OpenFolder()">Open Folder</Button>
-        }
+        <Buttons>
+            @if (folder != null)
+            {
+                <Button Color="Color.Primary" Clicked="() => folder.OpenFolder()">Open Folder</Button>
+            }
             <Button Color="Color.Primary" Clicked="ShowRegister">Document Register</Button>
-    </Buttons >
+        </Buttons>
     </Buttons>
 
     <Heading Size="HeadingSize.Is4">Workstages</Heading>
 
-    @foreach (ProjectWorkstage workstage in _projectDetails.Workstages)
-    {
-        <div>@workstage.Name</div>
-    }
+    <CardDeck>
+        @foreach (ProjectWorkstage workstage in _projectDetails.Workstages)
+        {
+            <ProjectWorkstageCard Workstage="workstage" />
+        }
+        </CardDeck>
 
     <Heading Size="HeadingSize.Is4">Variations</Heading>
     <Button Color="Color.Primary" Clicked="NewVariation">Add Variation</Button>
@@ -54,47 +56,57 @@
                 </TableRow>
             </TableHeader>
             <TableBody>
-            @foreach (Variation v in _projectVariations)
-            {
+                @foreach (Variation v in _projectVariations)
+                {
                     <TableRow>
                         <TableRowHeader>
                             @v.Reference
                         </TableRowHeader>
-                        <TableRowCell>@{
-                                          if (v.Accepted != null)
-                                          {
-                                              @("✅")
-                                          }
-                                          else
-                                          {
-                                              @("X")
-                                          }
-                                      }</TableRowCell>
+                        <TableRowCell>
+                            @{
+                                if (v.Accepted != null)
+                                {
+                                    @("✅")
+                                }
+                                else
+                                {
+                                    @("X")
+                                }
+                            }
+                        </TableRowCell>
                         <TableRowCell>@v.Charge</TableRowCell>
-                
-                </TableRow>
-            }
+
+                    </TableRow>
+                }
             </TableBody>
         </Table>
     }
 
-    <Accordion Class="accordion-flush">
-    
-    <TaskGroupView Name="General Tasks" Tasks="@TaskState.SelectedProject.Tasks" Expanded="true"></TaskGroupView>
 
-    </Accordion>    
+
+    @if (Flags.TasksEnabled)
+    {
+        <Accordion Class="accordion-flush">
+            <TaskGroupView Name="General Tasks" Tasks="@TaskState.SelectedProject.Tasks" Expanded="true"></TaskGroupView>
+        </Accordion>
+    }
+
+
 }
 else
 {
     if (TaskState != null && TaskState.SelectedProject != null)
     {
-        <Progress Value="100" Animated Striped/>
+        <Progress Value="100" Animated Striped />
     }
 }
 
 @code {
     [CascadingParameter]
     public TaskStateMachine? TaskState { get; set; }
+
+    [CascadingParameter]
+    public FeatureFlags Flags { get; set; }
 
     private bool nativeAvailable = false;
     private ProjectFolder? folder;
@@ -107,13 +119,16 @@ else
     {
         if (TaskState != null && TaskState.SelectedProject != null)
         {
+            _projectDetails = null;
+            StateHasChanged();
+
             Task<ProjectFolder> folderTask = null;
             Task<ProjectDetails> detailTask = null;
             Task<List<Variation>> variationTask = null;
 
             if (await _nativeFiles.Available())
             {
-                 folderTask = _nativeFiles.GetProjectFolder(TaskState.SelectedProject.ProjectId);
+                folderTask = _nativeFiles.GetProjectFolder(TaskState.SelectedProject.ProjectId);
             }
 
             detailTask = _projectService.GetProjectDetails(TaskState.SelectedProject.ProjectId);
