--- a/src/ProjectManager/Components/ProjectWorkstageCard.razor
+++ b/src/ProjectManager/Components/ProjectWorkstageCard.razor
@@ -3,26 +3,63 @@
 
 <Card>
     <CardBody>
-        <CardTitle Size="3">
+        <CardTitle Size="4">
             @Workstage.Name
         </CardTitle>
         <CardText>
-            <Progress Max="100" ShowValue="false">
+            <div>
+            <Progress Max="@maxValue" ShowValue="false">
                 <!--Invoiced-->
-                <ProgressBar Color="Color.Success" Value="30" />
+                    <ProgressBar Color="Color.Success" Value="@invoice" Max="@maxValue" />
                 <!--Spent-->
-                <ProgressBar Color="Color.Info" Value="30"/>
+                    <ProgressBar Color="Color.Info" Value="@unbilled" Max="@maxValue" />
                 <!--Invoiced-->
-                <ProgressBar Color="Color.Danger" Value="40"/>
+                    <ProgressBar Color="Color.Danger" Value="@overspend" Max="@maxValue" />
             </Progress>
+            </div>
+            @if (unbilled > 0)
+                {
+                <div>£@(Workstage.Invoiced.Value.ToString("0.00")) of £@(Workstage.TotalFee.Value.ToString("0.00")) invoiced</div>
+                }
+                @if (overspend > 0)
+                {
+                <div>£@(overspend) over budget</div>
+                }
+            
         </CardText>
-        <Button Color="Color.Primary" Margin="Margin.Is2.FromTop">
+        <!--<Button Color="Color.Primary" Margin="Margin.Is2.FromTop">
             Details <Icon Name="IconName.ArrowRight" />
-        </Button>
+        </Button>-->
     </CardBody>
 </Card>
 
 @code {
     [Parameter]
     public ProjectWorkstage Workstage { get; set; }
+
+    int maxValue
+    {
+        get { return (int)Math.Max(Workstage.Costs.Value, Workstage.TotalFee.Value); }
+    }
+
+    int unbilled
+    {
+        get
+        {
+            decimal unbilledCap = Math.Min(Workstage.Costs.Value, Workstage.TotalFee.Value);
+            decimal val = unbilledCap - Workstage.Invoiced.Value;
+            return (int)Math.Max(val, 0);
+        }
+    }
+
+    int overspend
+    {
+        get { return (int)Math.Max(Workstage.Costs.Value - Workstage.TotalFee.Value, 0); }
+    }
+
+    int invoice
+    {
+        get { return (int)Workstage.Invoiced.Value; }
+    }
+
 }
